# sonec

./: .env.example  .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  Modelfile  NOTICE  README.md  SECURITY.md  pyproject.toml  target.md
.github/workflows/: ci.yml  daily.yml
configs/leaderboard/: arms_2b.json
configs/rl/: grpo_recipe.md
configs/sft/: axolotl_qlora.yml  mlx_lora.yaml  unsloth_qlora.yaml
docs/: GATE_REPORT_MODEL_STACK.md  GATE_REPORT_PHASES_0_2.md  architecture.md  getting-started.md
docs/results/: COMPARE_REPORT.json  COMPARE_REPORT.md  DAILY_STATUS.json  DAILY_STATUS.md  SFT_METRICS.json  TRAIN_PROOF.md  arm_qwen35_2b_base.json  arm_sonec_lora.json
examples/: corpora.yaml  eval_tasks.json  run_mock_agent.py
examples/benchmarks/: ab_agent_2b_hard.json  ab_agent_v1.json  capabilitybench_v1.json  smoke.json  sonecbench_v1.json  trainbench_v1.json  worldbench_v1.json
scripts/: capabilitybench_e2e.sh  ci_daily_stats.py  overnight_specialize.sh  world_rl_leaderboard.sh
sonec/: __init__.py  __main__.py  app.py  models.py
sonec/agent/: __init__.py  runtime.py
sonec/analysis/: __init__.py  architecture.py  debug.py  refactor.py  review.py
sonec/browser/: __init__.py  session.py
sonec/cli/: __init__.py  main.py  providers.py
sonec/core/: __init__.py  coerce.py  config.py  errors.py  events.py  types.py  workspace.py
sonec/docsgen/: __init__.py  generator.py
sonec/eval/: __init__.py  capabilitybench.py  compare.py  corpora.py  harness.py  leaderboard.py  sealed.py  sonecbench.py  trainbench.py  worldbench.py
sonec/filesystem/: __init__.py  service.py
sonec/git/: __init__.py  service.py
sonec/harness/: __init__.py  compaction.py  context.py  critic.py  (+3 more)
tests/: test_agent.py  test_agent_format.py  test_analysis.py  test_capabilitybench.py  test_cli.py  test_compare.py  test_docs_browser.py  test_eval_training.py  test_filesystem.py  test_harness_skills.py  test_indexing.py  test_integrity_gates.py  test_leaderboard.py  test_llm.py  test_memory_planning.py  test_phase0_harness.py  test_production_hardening.py  test_rewards.py  test_specialize_train.py  test_terminal_git.py  test_tool_parse.py  test_train_backends.py  test_weights.py  test_workspace.py  test_world_train_ide.py
(+61 files in other folders)
