[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sonec"
version = "1.0.0"
description = "sonec by Suryanshu Nabheet — coding model"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "Suryanshu Nabheet" },
]
keywords = [
  "sonec",
  "coding-model",
  "software-engineering",
  "mlx",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rich>=13.7",
  "typer>=0.12",
  "pathspec>=0.12",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
train = [
  "mlx>=0.22",
  "mlx-lm>=0.22",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
all = ["sonec[browser,dev,train]"]

[project.scripts]
sonec = "sonec.cli.main:app"

[project.urls]
Homepage = "https://github.com/Suryanshu-Nabheet/sonec"
Documentation = "https://github.com/Suryanshu-Nabheet/sonec/tree/main/docs"
Repository = "https://github.com/Suryanshu-Nabheet/sonec"
Issues = "https://github.com/Suryanshu-Nabheet/sonec/issues"

[tool.hatch.build.targets.wheel]
packages = ["sonec"]

[tool.hatch.build.targets.wheel.force-include]
"sonec/rules" = "sonec/rules"
"sonec/skills" = "sonec/skills"

[tool.hatch.build.targets.sdist]
include = [
  "/sonec",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/target.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["sonec", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  "B008",
  "E501",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sonec"]
mypy_path = "."
